tdf#137526 sw ChangesInMargin: fix Undo of deleted words

Follow-up of commit 1e383097aa929176bac33f46787e16d945a0a98b
(tdf#34355 sw,offapi,officecfg: show track changes in margin).

Change-Id: I81dd310b2664d19de272f7c61ba5ac142592f9f0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104557
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>