sw/source/core/doc/DocumentContentOperationsManager.cxx
@@ -3979,9 +3979,22 @@ bool DocumentContentOperationsManager::DeleteAndJoinWithRedlineImpl( SwPaM & rPa
                 "sw.core", "redlines will be moved in DeleteAndJoin");
         m_rDoc.getIDocumentRedlineAccess().SetRedlineFlags(
             RedlineFlags::On | RedlineFlags::ShowInsert | RedlineFlags::ShowDelete);
+
+        SwViewShell *pSh = m_rDoc.getIDocumentLayoutAccess().GetCurrentViewShell();
+        bool bShowChangesInMargin = pSh && pSh->GetViewOptions()->IsShowChangesInMargin();
+        const SwRedlineTable& rTable = m_rDoc.getIDocumentRedlineAccess().GetRedlineTable();
         for (SwRangeRedline * pRedline : redlines)
         {
             assert(pRedline->HasValidRange());
+
+            // deletions shown in margin
+            if (bShowChangesInMargin &&
+                    // within a paragraph TODO: fix also for paragraph join
+                    pRedline->GetPoint()->nNode == pRedline->GetMark()->nNode)
+            {
+                pRedline->Show(0, rTable.GetPos(pRedline), /*bForced=*/false);
+                pRedline->Show(1, rTable.GetPos(pRedline), /*bForced=*/false);
+            }
             undos.emplace_back(std::make_unique<SwUndoRedlineDelete>(
                         *pRedline, SwUndoId::DELETE));
         }
